test/rbkt/Queries/zorba/error/error4.xq
fn:error(fn:QName('http://www.example.com', 'example:testerror'), 
         "my error !",
         (<a>param1</a>, "param2"))
